@@ -3,10 +3,15 @@ $Id$
 OpenDNSSEC 1.1 branch
 
 * Dnsruby 1.48 now required (for correct zone parsing)
+* ldns 1.6.6 is required to fix the zone fetcher bug
 
 Bugfixes:
 * ods-control stop did not stopped zone fetcher (bug was introduced in 1.1.0)
 * Auditor correctly handles chains of empty nonterminals
+* Zone fetcher can block zone transfers if AXFR once failed. This is a bug
+  in ldns versions 1.6.5 and lower. See KNOWN_ISSUES for more information.
+* Bugreport #165: Ensure Output SOA serial is always bigger than Input SOA
+  serial.
 
 OpenDNSSEC 1.1.1 - 2010-07-08
 
